# Heart-Failure-Prediction-Using-Machine-Learning

./: MLmodel.ipynb  README.md  app.py  heart_model.pkl  pyproject.toml  scaler.pkl
static/: style.css
templates/: index.html
